<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dbatu.net.ConnectionActivity"
    tools:showIn="@layout/activity_connection">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view3"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/buttonConnect"
        android:layout_alignEnd="@+id/buttonConnect">

        <AutoCompleteTextView
            android:id="@+id/ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ip_input"
            android:inputType="number|phone"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:ems="15"
        android:id="@+id/buttonConnect"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/view3"
        android:layout_alignStart="@+id/buttonClear"
        android:layout_marginTop="38dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:text="@string/clear"
        android:id="@+id/buttonClear"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/buttonConnect"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
